Add note about bigram SVM run being unsuccessful

--- a/movie_sentiment_classification.ipynb
+++ b/movie_sentiment_classification.ipynb
@@ -3808,7 +3808,9 @@
    "id": "interesting-buddy",
    "metadata": {},
    "source": [
-    "First we will look at how these models are effected by using a bigram feature set as opposed to a unigram feature set. We will plot each model when using both of these and see the difference between their average accuracy values."
+    "First we will look at how these models are effected by using a bigram feature set as opposed to a unigram feature set. We will plot each model when using both of these and see the difference between their average accuracy values.\n",
+    "\n",
+    "NOTE: The Support Vector Machine model is not in this plot as it takes 7 hours to run and when I went to run it on Google Colab Pro, I got 6 hours through and my internet dropped in turn dropping the Google Colab runtime. Nevertheless, I suspect that the results would be quite similar to that of the other models as when I ran the bigram Support Vector Machine on the original dataset without the word counts clipped, it got an accuracy score of 75% which was a decrease compared to the accuracy when using the unigram feature set."
    ]
   },
   {
